# hp-robotics-discord-bot

./: main.py  pyproject.toml
