[tool.poetry]
name = "hp-robotics-discord-bot"
version = "0.1.0"
description = ""
authors = ["212hawk <212petersonh@student.dist113.org>"]

[tool.poetry.dependencies]
python = "^3.7"
discord = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
